--- a/README
+++ b/README
@@ -7,3 +7,7 @@ TODO
 - create more graphic feature with canvas
 - try to get the percentage even in the browser that don't support ajax
 - fix the bugs with mobile devices 
+
+THANKS
+
+Special thanks to Luca La Tegola [ @lategolaluca ] and Claudio Marcandalli for their help.
