--- a/README
+++ b/README
@@ -11,3 +11,4 @@ TODO
 THANKS
 
 Special thanks to Luca La Tegola [ @lategolaluca ] and Claudio Marcandalli for their help.
+Thanks to Edan Kwan [ @edankwan ] for the  inspiration.
