--- a/README
+++ b/README
@@ -1,10 +1,7 @@
-This plug-in creates a nice preloader using html5 canvas API to draw the percentage during the page loading. Now it works just with images but I hope soon it will work also with audio and video objects.
-
-TODO
+Now you can preload your HTML 5 page with this nice plug in, passing data via JSON. You can customize it changing colors and style. It can preload video, audio, images and js
 
 - testing the plug in and find all the bugs
 - create more graphic feature with canvas
-
 
 
 DONE 
